--- a/templates/index.html
+++ b/templates/index.html
@@ -291,6 +291,7 @@
     </div>
 
     <script src="{{ url_for('static', filename='custom-confirm.js') }}"></script>
+    <script src="{{ url_for('static', filename='player-colors.js') }}"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
