Einstellung Runden-Limit

--- a/templates/index.html
+++ b/templates/index.html
@@ -125,23 +125,27 @@
                             </div>
                             <div class="form-group">
                                 <label>Maximale Karten pro Spieler</label>
-                                <input type="number" id="settings-max-cards" class="settings-input" min="5" max="15" value="7">
+                                <input type="number" id="settings-max-cards" class="settings-input" min="5" max="1500" value="7">
                             </div>
                             <div class="form-group">
                                 <label>Punkte zum Gewinnen</label>
-                                <input type="number" id="settings-win-score" class="settings-input" min="3" max="20" value="10">
+                                <input type="number" id="settings-win-score" class="settings-input" min="3" max="2000" value="10">
+                            </div>
+                            <div class="form-group">
+                                <label>Runden-Limit</label>
+                                <input type="number" id="settings-max-rounds" class="settings-input" min="1" max="10000" value="50">
                             </div>
                             <div class="form-group">
                                 <label>Zeit für Antworten (Sekunden)</label>
-                                <input type="number" id="settings-answer-time" class="settings-input" min="30" max="300" value="60">
+                                <input type="number" id="settings-answer-time" class="settings-input" min="30" max="30000" value="60">
                             </div>
                             <div class="form-group">
                                 <label>Zeit für Card Czar Auswahl (Sekunden)</label>
-                                <input type="number" id="settings-czar-time" class="settings-input" min="15" max="120" value="30">
+                                <input type="number" id="settings-czar-time" class="settings-input" min="15" max="12000" value="30">
                             </div>
                             <div class="form-group">
                                 <label>Zeit zwischen Runden (Sekunden)</label>
-                                <input type="number" id="settings-round-delay" class="settings-input" min="3" max="15" value="5">
+                                <input type="number" id="settings-round-delay" class="settings-input" min="3" max="1500" value="5">
                             </div>
                             <p class="info-text" id="creator-info" style="display: none;">Nur der Ersteller kann Einstellungen ändern</p>
                         </div>
