--- a/templates/index.html
+++ b/templates/index.html
@@ -304,6 +304,7 @@
 
     <script src="{{ url_for('static', filename='custom-confirm.js') }}"></script>
     <script src="{{ url_for('static', filename='player-colors.js') }}"></script>
+    <script src="{{ url_for('static', filename='game-settings.js') }}"></script>
     <script src="{{ url_for('static', filename='script.js') }}"></script>
 </body>
 </html>
