--- a/templates/index.html
+++ b/templates/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cards Against Everyone</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='custom-confirm.css') }}">
-    <link rel="stylesheet" href="{{ url_for('static', filename='round-history.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/custom-confirm.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/round-history.css') }}">
     <script src="https://cdn.socket.io/4.5.4/socket.io.min.js"></script>
 </head>
 <body>
@@ -302,9 +302,9 @@
         </div>
     </div>
 
-    <script src="{{ url_for('static', filename='custom-confirm.js') }}"></script>
-    <script src="{{ url_for('static', filename='player-colors.js') }}"></script>
-    <script src="{{ url_for('static', filename='game-settings.js') }}"></script>
-    <script src="{{ url_for('static', filename='script.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/custom-confirm.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/player-colors.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/game-settings.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/script.js') }}"></script>
 </body>
 </html>
