seperate lobby methods /1

--- a/templates/index.html
+++ b/templates/index.html
@@ -306,5 +306,8 @@
     <script src="{{ url_for('static', filename='js/player-colors.js') }}"></script>
     <script src="{{ url_for('static', filename='js/game-settings.js') }}"></script>
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
+
+    <script src="{{ url_for('static', filename='js/ui/ui_general.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/ui/ui_serverlobby.js') }}"></script>
 </body>
 </html>
